Unify Networking Thread: Update Existing classes
In previous CL, we define class OperationLoop which acts on a

std::vector<std::function<void(Clock::duration)>>. This CL defines
helper methods to use this class, defines and as well as impliments an
interface that can be used to call the current networking classes, and
updates TlsDataReaderWriter to allow for timing-out its networking
operations.
Change-Id: I8e1010e1793643789f07142589fe2d567d739cb8

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -38,6 +38,7 @@ source_set("platform") {
     "base/ip_address.h",
     "base/location.cc",
     "base/location.h",
+    "base/network_loop_helper.h",
     "base/socket_state.h",
     "base/tls_connect_options.h",
     "base/tls_credentials.cc",
@@ -163,6 +164,7 @@ source_set("unittests") {
     "base/error_unittest.cc",
     "base/ip_address_unittest.cc",
     "base/location_unittest.cc",
+    "base/network_loop_helper_unittest.cc",
     "base/tls_credentials_unittest.cc",
   ]
 
