--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -23,6 +23,8 @@ source_set("util") {
     "json/json_reader.h",
     "json/json_writer.cc",
     "json/json_writer.h",
+    "operation_loop.cc",
+    "operation_loop.h",
     "saturate_cast.h",
     "std_util.h",
     "stringprintf.h",
@@ -51,6 +53,7 @@ source_set("unittests") {
     "integer_division_unittest.cc",
     "json/json_reader_unittest.cc",
     "json/json_writer_unittest.cc",
+    "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
     "yet_another_bit_vector_unittest.cc",
   ]
