--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -15,6 +15,8 @@ source_set("platform") {
     "api/logging_util.cc",
     "api/network_interface.cc",
     "api/network_interface.h",
+    "api/platform_client.cc",
+    "api/platform_client.h",
     "api/scoped_wake_lock.cc",
     "api/scoped_wake_lock.h",
     "api/socket.h",
@@ -82,6 +84,8 @@ source_set("platform") {
 
     if (is_posix) {
       sources += [
+        "impl/platform_client_posix.cc",
+        "impl/platform_client_posix.h",
         "impl/scoped_pipe.h",
         "impl/scoped_wake_lock_posix.cc",
         "impl/scoped_wake_lock_posix.h",
