--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -7,6 +7,8 @@ import("//build_overrides/build.gni")
 source_set("mdns") {
   sources = [
     "mdns/mdns_constants.h",
+    "mdns/mdns_querier.cc",
+    "mdns/mdns_querier.h",
     "mdns/mdns_reader.cc",
     "mdns/mdns_reader.h",
     "mdns/mdns_receiver.cc",
@@ -35,6 +37,7 @@ source_set("unittests") {
   testonly = true
 
   sources = [
+    "mdns/mdns_querier_unittest.cc",
     "mdns/mdns_random_unittest.cc",
     "mdns/mdns_reader_unittest.cc",
     "mdns/mdns_receiver_unittest.cc",
