--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -7,6 +7,8 @@ import("//build_overrides/build.gni")
 source_set("mdns") {
   sources = [
     "mdns/mdns_constants.h",
+    "mdns/mdns_querier.cc",
+    "mdns/mdns_querier.h",
     "mdns/mdns_reader.cc",
     "mdns/mdns_reader.h",
     "mdns/mdns_receiver.cc",
@@ -14,6 +16,8 @@ source_set("mdns") {
     "mdns/mdns_record_changed_callback.h",
     "mdns/mdns_records.cc",
     "mdns/mdns_records.h",
+    "mdns/mdns_responder.cc",
+    "mdns/mdns_responder.h",
     "mdns/mdns_sender.cc",
     "mdns/mdns_sender.h",
     "mdns/mdns_trackers.cc",
@@ -35,10 +39,12 @@ source_set("unittests") {
   testonly = true
 
   sources = [
+    "mdns/mdns_querier_unittest.cc",
     "mdns/mdns_random_unittest.cc",
     "mdns/mdns_reader_unittest.cc",
     "mdns/mdns_receiver_unittest.cc",
     "mdns/mdns_records_unittest.cc",
+    "mdns/mdns_responder_unittest.cc",
     "mdns/mdns_sender_unittest.cc",
     "mdns/mdns_trackers_unittest.cc",
     "mdns/mdns_writer_unittest.cc",
