TcpSocket: Implement TlsWriteBuffer
Implement the TlsWriteBuffer for which the interface was finalized in
previous CL
https://chromium-review.googlesource.com/c/openscreen/+/1797222/6

Change-Id: I90e1d3b5069d8bf4fe9cbb506b357f74a072192e

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -187,6 +187,7 @@ source_set("unittests") {
         "impl/socket_address_posix_unittest.cc",
         "impl/socket_handle_waiter_posix_unittest.cc",
         "impl/tls_data_router_posix_unittest.cc",
+        "impl/tls_write_buffer_unittest.cc",
         "impl/udp_socket_reader_posix_unittest.cc",
       ]
     }
