--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -79,7 +79,16 @@ source_set("platform") {
         "__APPLE_USE_RFC_3542",
       ]
 
-      sources += [ "impl/network_interface_mac.cc" ]
+      libs = [
+        "CoreFoundation.framework",
+        "IOKit.framework",
+      ]
+
+      sources += [
+        "impl/network_interface_mac.cc",
+        "impl/scoped_wake_lock_mac.cc",
+        "impl/scoped_wake_lock_mac.h",
+      ]
     }
 
     if (is_posix) {
@@ -87,8 +96,6 @@ source_set("platform") {
         "impl/platform_client_posix.cc",
         "impl/platform_client_posix.h",
         "impl/scoped_pipe.h",
-        "impl/scoped_wake_lock_posix.cc",
-        "impl/scoped_wake_lock_posix.h",
         "impl/socket_address_posix.cc",
         "impl/socket_address_posix.h",
         "impl/socket_handle_posix.cc",
