Add cast sender socket factory
This change adds a CastSocket factory for the sender-side which performs
the sender auth challenge and verification before passing a CastSocket
back to the caller.

Bug: openscreen:59
Change-Id: Ibbbdb2b8881e385cc0a8defbe309c7f10a2af323

--- a/cast/common/channel/BUILD.gn
+++ b/cast/common/channel/BUILD.gn
@@ -8,6 +8,7 @@ source_set("channel") {
     "cast_socket.h",
     "message_framer.cc",
     "message_framer.h",
+    "message_util.h",
   ]
 
   deps = [
