--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -28,6 +28,7 @@ source_set("util") {
     "saturate_cast.h",
     "std_util.h",
     "stringprintf.h",
+    "subscriber_model.h",
     "yet_another_bit_vector.cc",
     "yet_another_bit_vector.h",
   ]
@@ -55,6 +56,7 @@ source_set("unittests") {
     "json/json_writer_unittest.cc",
     "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
+    "subscriber_model_unittest.cc",
     "yet_another_bit_vector_unittest.cc",
   ]
 
