Add virtual connection routing
This change adds the concept of virtual connections to cast sockets as
well as a simple message routing scheme based on them.

Bug: openscreen:59
Change-Id: I22c9332170865e4f611f41fa0590f1ab904b3c3e

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -11,6 +11,7 @@ group("gn_all") {
   deps = [
     "cast/common:mdns",
     "cast/common/certificate",
+    "cast/receiver/channel",
     "cast/sender/channel",
     "osp",
     "osp/msgs",
