--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -32,10 +32,13 @@ source_set("util") {
     "yet_another_bit_vector.h",
   ]
 
+  public_deps = [
+    "../third_party/jsoncpp",
+  ]
+
   deps = [
     "../third_party/abseil",
     "../third_party/boringssl",
-    "../third_party/jsoncpp",
   ]
 
   configs += [ "../build:allow_build_from_embedder" ]
