--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -12,6 +12,7 @@ source_set("dnssd") {
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
     "dnssd/public/querier.h",
+    "dnssd/public/txt_record.cc",
     "dnssd/public/txt_record.h",
   ]
 
@@ -27,7 +28,9 @@ source_set("dnssd") {
 source_set("unittests") {
   testonly = true
 
-  sources = []
+  sources = [
+    "dnssd/public/txt_record_unittest.cc",
+  ]
 
   deps = [
     ":dnssd",
