--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -9,6 +9,7 @@ source_set("dnssd") {
 
   sources = [
     "dnssd/dns_sd_temp.cc",
+    "dnssd/public/instance_record.cc",
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
     "dnssd/public/querier.h",
@@ -27,7 +28,9 @@ source_set("dnssd") {
 source_set("unittests") {
   testonly = true
 
-  sources = []
+  sources = [
+    "dnssd/public/instance_record_unittest.cc",
+  ]
 
   deps = [
     ":dnssd",
