Fix chrome build, add unit testing in Chrome
This patch contains preparation for running Open Screen unit tests in
Chrome, as well as successfully linking in the Chrome platform
implementation for Open Screen's platform target.

See the follow up patch here:
https://chromium-review.googlesource.com/c/chromium/src/+/1880544

Change-Id: I32c1bd728a43c5dbe155bcaa11527ad275c6b871

--- a/build_overrides/build.gni
+++ b/build_overrides/build.gni
@@ -4,3 +4,35 @@
 
 # Set to false to build OpenScreen targets as a standalone library.
 build_with_chromium = false
+
+openscreen_root = get_path_info(".", "abspath")
+
+# All binary targets will get this list of configs by default.
+_shared_binary_target_configs = [
+  openscreen_root + "/build/config:openscreen_code",
+  openscreen_root + "/build/config:no_exceptions",
+  openscreen_root + "/build/config:no_rtti",
+  openscreen_root + "/build/config:symbol_visibility_hidden",
+  openscreen_root + "/build/config:default_sanitizers",
+  openscreen_root + "/build/config:compiler_defaults",
+  openscreen_root + "/build/config:default_optimization",
+  openscreen_root + "/build:allow_build_from_embedder",
+  openscreen_root + "/build:default_include_dirs",
+]
+
+# Apply that default list to the binary target types.
+set_defaults("executable") {
+  configs = _shared_binary_target_configs
+}
+
+set_defaults("static_library") {
+  configs = _shared_binary_target_configs
+}
+
+set_defaults("shared_library") {
+  configs = _shared_binary_target_configs
+}
+
+set_defaults("source_set") {
+  configs = _shared_binary_target_configs
+}
