--- a/osp/impl/discovery/mdns/BUILD.gn
+++ b/osp/impl/discovery/mdns/BUILD.gn
@@ -4,6 +4,8 @@
 
 import("../../../build/config/services.gni")
 
+assert(use_mdns_responder)
+
 source_set("mdns_interface") {
   sources = [
     "domain_name.cc",
@@ -21,17 +23,17 @@ source_set("mdns_interface") {
 source_set("unittests") {
   testonly = true
 
-  sources = [
-    "domain_name_unittest.cc",
-  ]
-
-  deps = [
-    ":mdns_interface",
-    "../../../../third_party/googletest:gmock",
-    "../../../../third_party/googletest:gtest",
-  ]
-
   if (use_mdns_responder) {
+    sources = [
+      "domain_name_unittest.cc",
+    ]
+
+    deps = [
+      ":mdns_interface",
+      "../../../../third_party/googletest:gmock",
+      "../../../../third_party/googletest:gtest",
+    ]
+
     sources += [ "mdns_responder_adapter_impl_unittest.cc" ]
     deps += [ ":mdns" ]
   }
