--- a/osp/impl/testing/BUILD.gn
+++ b/osp/impl/testing/BUILD.gn
@@ -2,8 +2,14 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//build_overrides/build.gni")
+import("../../build/config/services.gni")
+
+assert(use_mdns_responder)
+
 source_set("testing") {
   testonly = true
+
   sources = [
     "fake_mdns_platform_service.cc",
     "fake_mdns_platform_service.h",
@@ -19,6 +25,7 @@ source_set("testing") {
 
 source_set("unittests") {
   testonly = true
+
   sources = [
     "fake_mdns_platform_service_unittest.cc",
     "fake_mdns_responder_adapter_unittest.cc",
