--- a/osp/msgs/BUILD.gn
+++ b/osp/msgs/BUILD.gn
@@ -17,8 +17,10 @@ source_set("msgs") {
     "../../third_party/tinycbor",
   ]
 
-  public_configs = [ ":cddl_gen_config" ]
-  configs += [ "../../build:allow_build_from_embedder" ]
+  public_configs = [
+    ":cddl_gen_config",
+    "../../build:allow_build_from_embedder",
+  ]
 }
 
 config("cddl_gen_config") {
@@ -75,6 +77,4 @@ source_set("unittests") {
     ":msgs",
     "../../third_party/googletest:gtest",
   ]
-
-  configs += [ "../../build:allow_build_from_embedder" ]
 }
