--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -54,7 +54,7 @@ source_set("platform") {
     "../util",
   ]
 
-  configs += [ "../build:allow_build_from_embedder" ]
+  public_configs = [ "../build:openscreen_include_dirs" ]
 
   if (!build_with_chromium) {
     sources += [
@@ -139,8 +139,6 @@ source_set("test") {
     "test/trace_logging_helpers.h",
   ]
 
-  configs += [ "../build:allow_build_from_embedder" ]
-
   deps = [
     ":platform",
     "../third_party/googletest:gmock",
@@ -155,8 +153,6 @@ source_set("default_logger") {
   if (is_posix) {
     sources += [ "impl/log_initializer_posix.cc" ]
   }
-
-  configs += [ "../build:allow_build_from_embedder" ]
 
   deps = [
     "../third_party/abseil",
@@ -206,6 +202,4 @@ source_set("unittests") {
     "../third_party/googletest:gmock",
     "../third_party/googletest:gtest",
   ]
-
-  configs += [ "../build:allow_build_from_embedder" ]
 }
