--- a/tools/cddl/BUILD.gn
+++ b/tools/cddl/BUILD.gn
@@ -22,6 +22,6 @@ if (current_toolchain == host_toolchain) {
       "../../third_party/abseil",
     ]
 
-    configs += [ "../../build:allow_build_from_embedder" ]
+    configs += [ "../../build:openscreen_include_dirs" ]
   }
 }
