--- a/osp/BUILD.gn
+++ b/osp/BUILD.gn
@@ -59,6 +59,8 @@ source_set("unittests") {
   if (use_mdns_responder) {
     sources += [ "impl/mdns_responder_service_unittest.cc" ]
   }
+
+  configs += [ "../build:allow_build_from_embedder" ]
 }
 
 if (use_chromium_quic && use_mdns_responder) {
