--- a/streaming/cast/BUILD.gn
+++ b/streaming/cast/BUILD.gn
@@ -55,6 +55,8 @@ source_set("common") {
     "../../platform",
     "../../util",
   ]
+
+  configs += [ "../../build:allow_build_from_embedder" ]
 }
 
 source_set("receiver") {
@@ -78,6 +80,8 @@ source_set("receiver") {
   public_deps = [
     ":common",
   ]
+
+  configs += [ "../../build:allow_build_from_embedder" ]
 }
 
 source_set("sender") {
@@ -93,6 +97,8 @@ source_set("sender") {
   public_deps = [
     ":common",
   ]
+
+  configs += [ "../../build:allow_build_from_embedder" ]
 }
 
 source_set("unittests") {
@@ -123,6 +129,8 @@ source_set("unittests") {
     "../../third_party/googletest:gmock",
     "../../third_party/googletest:gtest",
   ]
+
+  configs += [ "../../build:allow_build_from_embedder" ]
 }
 
 if (build_with_chromium) {
