--- a/build_overrides/build.gni
+++ b/build_overrides/build.gni
@@ -4,3 +4,7 @@
 
 # Set to false to build OpenScreen targets as a standalone library.
 build_with_chromium = false
+
+# The platform implementation path must be set if build_with_chromium is
+# set to true.
+openscreen_platform_impl_path = ""
