--- a/cast/sender/channel/BUILD.gn
+++ b/cast/sender/channel/BUILD.gn
@@ -19,6 +19,8 @@ source_set("channel") {
   public_deps = [
     "../../../platform",
   ]
+
+  configs += [ "../../../build:allow_build_from_embedder" ]
 }
 
 source_set("unittests") {
@@ -34,4 +36,6 @@ source_set("unittests") {
     "../../common/certificate/proto:unittest_proto",
     "../../common/channel/proto",
   ]
+
+  configs += [ "../../../build:allow_build_from_embedder" ]
 }
