--- a/cast/common/certificate/BUILD.gn
+++ b/cast/common/certificate/BUILD.gn
@@ -23,6 +23,8 @@ source_set("certificate") {
     "../../../util",
     "proto",
   ]
+
+  configs += [ "../../../build:allow_build_from_embedder" ]
 }
 
 source_set("unittests") {
@@ -41,4 +43,6 @@ source_set("unittests") {
     "../../../third_party/googletest:gtest",
     "proto:unittest_proto",
   ]
+
+  configs += [ "../../../build:allow_build_from_embedder" ]
 }
