--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -43,5 +43,5 @@ source_set("unittests") {
     "../third_party/googletest:gtest",
   ]
 
-  configs += [ "../../build:allow_build_from_embedder" ]
+  configs += [ "../build:allow_build_from_embedder" ]
 }
