--- a/cast/common/certificate/BUILD.gn
+++ b/cast/common/certificate/BUILD.gn
@@ -2,6 +2,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//build_overrides/build.gni")
+
 source_set("certificate") {
   sources = [
     "cast_cert_validator.cc",
@@ -27,11 +29,15 @@ source_set("certificate") {
 
 source_set("unittests") {
   testonly = true
+
   sources = [
-    "cast_cert_validator_unittest.cc",
-    "cast_crl_unittest.cc",
     "test_helpers.cc",
     "test_helpers.h",
+  ]
+
+  sources += [
+    "cast_cert_validator_unittest.cc",
+    "cast_crl_unittest.cc",
   ]
 
   deps = [
