--- a/BUILD.gn
+++ b/BUILD.gn
@@ -22,9 +22,7 @@ group("gn_all") {
     "third_party/abseil",
     "third_party/boringssl",
     "third_party/jsoncpp",
-    "third_party/protobuf:protoc",
     "third_party/tinycbor",
-    "third_party/zlib",
     "tools/cddl",
     "util",
   ]
@@ -44,18 +42,24 @@ group("gn_all") {
   if (use_chromium_quic && use_mdns_responder) {
     deps += [ "osp:osp_demo" ]
   }
+
+  if (!build_with_chromium) {
+    deps += [
+      "third_party/protobuf:protoc",
+      "third_party/zlib",
+    ]
+  }
 }
 
-executable("openscreen_unittests") {
+source_set("unittests") {
   testonly = true
-  deps = [
+  public_deps = [
     "cast/common:unittests",
     "cast/common/certificate:unittests",
     "cast/common/channel:unittests",
     "cast/sender/channel:unittests",
     "discovery:unittests",
     "osp:unittests",
-    "osp/impl/discovery/mdns:unittests",
     "osp/impl/testing:unittests",
     "osp/msgs:unittests",
     "platform:unittests",
@@ -64,4 +68,18 @@ executable("openscreen_unittests") {
     "third_party/googletest:gtest_main",
     "util:unittests",
   ]
+
+  if (use_mdns_responder) {
+    public_deps += [ "osp/impl/discovery/mdns:unittests" ]
+  }
+
+}
+
+if (!build_with_chromium) {
+executable("openscreen_unittests") {
+  testonly = true
+  deps = [
+    ":unittests",
+  ]
+}
 }
