--- a/osp/impl/testing/BUILD.gn
+++ b/osp/impl/testing/BUILD.gn
@@ -2,8 +2,13 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//build_overrides/build.gni")
+import("../../build/config/services.gni")
+
 source_set("testing") {
   testonly = true
+
+  if (use_mdns_responder) {
   sources = [
     "fake_mdns_platform_service.cc",
     "fake_mdns_platform_service.h",
@@ -15,10 +20,13 @@ source_set("testing") {
     "../../../platform",
     "../discovery/mdns:mdns_interface",
   ]
+  }
 }
 
 source_set("unittests") {
   testonly = true
+
+  if (use_mdns_responder) {
   sources = [
     "fake_mdns_platform_service_unittest.cc",
     "fake_mdns_responder_adapter_unittest.cc",
@@ -29,4 +37,5 @@ source_set("unittests") {
     "../../../third_party/abseil",
     "../../../third_party/googletest:gtest",
   ]
+  }
 }
