--- a/cast/common/channel/BUILD.gn
+++ b/cast/common/channel/BUILD.gn
@@ -4,21 +4,22 @@
 
 source_set("channel") {
   sources = [
+    "cast_message_handler.h",
     "cast_socket.cc",
     "cast_socket.h",
     "message_framer.cc",
     "message_framer.h",
     "message_util.h",
-  ]
-
-  deps = [
-    "../../../util",
-    "proto",
+    "virtual_connection.h",
+    "virtual_connection_manager.cc",
+    "virtual_connection_manager.h",
   ]
 
   public_deps = [
     "../../../platform",
     "../../../third_party/abseil",
+    "../../../util",
+    "proto",
   ]
 }
 
@@ -27,11 +28,13 @@ source_set("unittests") {
   sources = [
     "cast_socket_unittest.cc",
     "message_framer_unittest.cc",
+    "virtual_connection_manager_unittest.cc",
   ]
 
   deps = [
     ":channel",
     "../../../platform",
+    "../../../platform:test",
     "../../../third_party/googletest:gmock",
     "../../../third_party/googletest:gtest",
     "../../../util",
