--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -10,6 +10,10 @@ source_set("dnssd") {
   sources = [
     "dnssd/dns_sd_temp.cc",
     "dnssd/impl/constants.h",
+    "dnssd/impl/conversion_layer.cc",
+    "dnssd/impl/conversion_layer.h",
+    "dnssd/impl/dns_data.cc",
+    "dnssd/impl/dns_data.h",
     "dnssd/public/instance_record.cc",
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
@@ -32,6 +36,8 @@ source_set("unittests") {
 
   sources = [
     "dnssd/impl/constants_unittest.cc",
+    "dnssd/impl/conversion_layer_unittest.cc",
+    "dnssd/impl/dns_data_unittest.cc",
     "dnssd/public/instance_record_unittest.cc",
     "dnssd/public/txt_record_unittest.cc",
   ]
