DnsSd: Querier Skeleton
This is the basic skeleton for a DNS-SD Querier implementation. Future
CLs will implement the methods in the .cc file, but committing this CL
first will allow for 2 CLs to do this in parallel instead of one large
CL.

Change-Id: I87f7ceaf223d8eb4673aff3d2b30e5275ab2b92c

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -10,6 +10,8 @@ source_set("dnssd") {
   sources = [
     "dnssd/dns_sd_temp.cc",
     "dnssd/impl/constants.h",
+    "dnssd/impl/querier_impl.cc",
+    "dnssd/impl/querier_impl.h",
     "dnssd/public/instance_record.cc",
     "dnssd/public/instance_record.h",
     "dnssd/public/publisher.h",
