--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -4,6 +4,38 @@
 
 import("//build_overrides/build.gni")
 
+source_set("mdns") {
+  sources = [
+    "mdns/mdns_querier.cc",
+    "mdns/mdns_querier.h",
+    "mdns/mdns_reader.cc",
+    "mdns/mdns_reader.h",
+    "mdns/mdns_receiver.cc",
+    "mdns/mdns_receiver.h",
+    "mdns/mdns_record_changed_callback.h",
+    "mdns/mdns_records.cc",
+    "mdns/mdns_records.h",
+    "mdns/mdns_sender.cc",
+    "mdns/mdns_sender.h",
+    "mdns/mdns_service_impl.cc",
+    "mdns/mdns_service_impl.h",
+    "mdns/mdns_trackers.cc",
+    "mdns/mdns_trackers.h",
+    "mdns/mdns_writer.cc",
+    "mdns/mdns_writer.h",
+    "mdns/public/mdns_constants.h",
+    "mdns/public/mdns_service.h",
+  ]
+
+  deps = [
+    "../platform",
+    "../third_party/abseil",
+    "../util",
+  ]
+
+  configs += [ "../../build:allow_build_from_embedder" ]
+}
+
 source_set("dnssd") {
   defines = []
 
@@ -25,7 +57,7 @@ source_set("dnssd") {
   ]
 
   deps = [
-    "../cast/common:mdns",
+    ":mdns",
     "../platform",
     "../third_party/abseil",
   ]
@@ -42,15 +74,24 @@ source_set("unittests") {
     "dnssd/impl/dns_data_unittest.cc",
     "dnssd/public/instance_record_unittest.cc",
     "dnssd/public/txt_record_unittest.cc",
+    "mdns/mdns_querier_unittest.cc",
+    "mdns/mdns_random_unittest.cc",
+    "mdns/mdns_reader_unittest.cc",
+    "mdns/mdns_receiver_unittest.cc",
+    "mdns/mdns_records_unittest.cc",
+    "mdns/mdns_sender_unittest.cc",
+    "mdns/mdns_trackers_unittest.cc",
+    "mdns/mdns_writer_unittest.cc",
   ]
 
   deps = [
     ":dnssd",
-    "../cast/common:mdns",
+    ":mdns",
     "../platform",
     "../third_party/abseil",
     "../third_party/googletest:gmock",
     "../third_party/googletest:gtest",
+    "../util",
   ]
 
   configs += [ "../../build:allow_build_from_embedder" ]
