[Open Screen] Consoidate BUILD.gn for cast/
This reduces the overall number of BUILD.gn files for more
maintainability.

It also adds a BUILD.gn for cast/streaming and removes unnecessary
includes.

Bug: openscreen:50
Change-Id: I7f5f083b81a9cee231af1080893d5cbe7a1436d0

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -9,9 +9,10 @@ import("osp/build/config/services.gni")
 # source_sets).
 group("gn_all") {
   deps = [
+    "cast/common:certificate",
+    "cast/common:channel",
     "cast/common:mdns",
-    "cast/common/certificate",
-    "cast/sender/channel",
+    "cast/sender:channel",
     "discovery:dnssd",
     "osp",
     "osp/msgs",
@@ -50,9 +51,7 @@ executable("openscreen_unittests") {
   testonly = true
   deps = [
     "cast/common:unittests",
-    "cast/common/certificate:unittests",
-    "cast/common/channel:unittests",
-    "cast/sender/channel:unittests",
+    "cast/sender:unittests",
     "discovery:unittests",
     "osp:unittests",
     "osp/impl/discovery/mdns:unittests",
