OpenScreen: Add WeakPtr, resolve some dangerous networking code issues.
Adds a simple openscreen::WeakPtr implementation, as a wrapper around
std::weak_ptr<>, and having the same ownership/invalidation/threading
semantics as Chromium's base::WeakPtr.

Then:

1. Removed implementation from platform/api interface classes for
TlsConnection and TlsConnectionFactory. Minor style fixes and comment
tweaks.

2. Resolved all known use-after-free bugs/TODOs in UdpSocketPosix,
TlsConnectionPosix, and TlsConnectionFactoryPosix.

3. Fixed a bug in CastSocket w.r.t. how it handles errors while flushing
its "blocked messages" queue.

4. Minor style fixes in touched files.

Bug: openscreen:71
Change-Id: I74ba83f17f56795d7565a271c933e3a75e572891

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -46,6 +46,7 @@ source_set("platform") {
     "base/tls_credentials.cc",
     "base/tls_credentials.h",
     "base/tls_listen_options.h",
+    "base/weak_ptr.h",
   ]
 
   public_deps = [
@@ -176,6 +177,7 @@ source_set("unittests") {
     "base/location_unittest.cc",
     "base/serial_delete_ptr_unittest.cc",
     "base/tls_credentials_unittest.cc",
+    "base/weak_ptr_unittest.cc",
   ]
 
   # The unit tests in impl/ assume the standalone implementation is being used.
