--- a/cast/common/channel/BUILD.gn
+++ b/cast/common/channel/BUILD.gn
@@ -7,9 +7,13 @@ source_set("channel") {
     "cast_message_handler.h",
     "cast_socket.cc",
     "cast_socket.h",
+    "connection_namespace_handler.cc",
+    "connection_namespace_handler.h",
     "message_framer.cc",
     "message_framer.h",
     "message_util.h",
+    "namespace_router.cc",
+    "namespace_router.h",
     "virtual_connection.h",
     "virtual_connection_manager.cc",
     "virtual_connection_manager.h",
@@ -20,10 +24,10 @@ source_set("channel") {
   public_deps = [
     "../../../platform",
     "../../../third_party/abseil",
+    "../../../util",
   ]
 
   deps = [
-    "../../../util",
     "proto",
   ]
 }
@@ -46,7 +50,9 @@ source_set("unittests") {
   testonly = true
   sources = [
     "cast_socket_unittest.cc",
+    "connection_namespace_handler_unittest.cc",
     "message_framer_unittest.cc",
+    "namespace_router_unittest.cc",
     "virtual_connection_manager_unittest.cc",
     "virtual_connection_router_unittest.cc",
   ]
