OpenScreen: Add WeakPtr, resolve some dangerous networking code issues.
Adds a simple openscreen::WeakPtr implementation, as a wrapper around
std::weak_ptr<>, and having the same ownership/invalidation/threading
semantics as Chromium's base::WeakPtr.

Then:

1. Removed implementation from platform/api interface classes for
TlsConnection and TlsConnectionFactory. Minor style fixes and comment
tweaks.

2. Resolved all known use-after-free bugs/TODOs in UdpSocketPosix,
TlsConnectionPosix, and TlsConnectionFactoryPosix.

3. Fixed a bug in CastSocket w.r.t. how it handles errors while flushing
its "blocked messages" queue.

4. Minor style fixes in touched files.

Bug: openscreen:71
Change-Id: I74ba83f17f56795d7565a271c933e3a75e572891

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -70,6 +70,7 @@ source_set("platform") {
       "impl/time.cc",
       "impl/tls_write_buffer.cc",
       "impl/tls_write_buffer.h",
+      "impl/weak_ptr.h",
     ]
 
     if (is_linux) {
@@ -183,6 +184,7 @@ source_set("unittests") {
       "api/socket_integration_unittest.cc",
       "impl/task_runner_unittest.cc",
       "impl/time_unittest.cc",
+      "impl/weak_ptr_unittest.cc",
     ]
 
     if (is_posix) {
