DNS-SD: Publisher
Implements the publisher class.
Most of the work for this class is done in the conversion layer, in
creating the MdnsRecords associated with a given InstanceRecord. Here,
we just store the InstanceRecords we have been given, and defer to the
conversion layer whenever we need mDNS entities.

Change-Id: I056c160e7dfd802ae5366a26a86e2a217189de82

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -47,6 +47,8 @@ source_set("dnssd") {
     "dnssd/impl/conversion_layer.h",
     "dnssd/impl/dns_data.cc",
     "dnssd/impl/dns_data.h",
+    "dnssd/impl/publisher_impl.cc",
+    "dnssd/impl/publisher_impl.h",
     "dnssd/impl/querier_impl.cc",
     "dnssd/impl/querier_impl.h",
     "dnssd/public/instance_record.cc",
@@ -69,6 +71,7 @@ source_set("unittests") {
     "dnssd/impl/constants_unittest.cc",
     "dnssd/impl/conversion_layer_unittest.cc",
     "dnssd/impl/dns_data_unittest.cc",
+    "dnssd/impl/publisher_impl_unittest.cc",
     "dnssd/public/instance_record_unittest.cc",
     "dnssd/public/txt_record_unittest.cc",
     "mdns/mdns_querier_unittest.cc",
